--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ width:30%;display:flex;flex-direction:row;justify-content:space-around;
  body{
 font-family: 'Kumbh Sans', sans-serif;
 background-color:hsl(185, 75%, 39%);
-background-image:url('images/bg-pattern-top.svg'),url('images/bg-pattern-bottom.svg');
+background-image:url('https://github.com/barnilsarma/Profile-card-component/blob/main/bg-pattern-top.svg'),url('https://github.com/barnilsarma/Profile-card-component/blob/main/bg-pattern-bottom.svg');
 background-position:-150px -300px,250px 300px;
 background-size:85% 130%,50% 150%;
 background-repeat:no-repeat,no-repeat;
