--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ transition-duration:0.5s;
 <center><div class="desktop-preview">
 <div class="profile">
 <br><br><br>
-<div><img class="victor" src="https://github.com/barnilsarma/Profile-card-component/blob/main/image-victor.jpg"></div>
+<div><img class="victor" src="https://github.com/barnilsarma/Profile-card-component/blob/main/image-victor.jpg?raw=true"></div>
 <center><div class="nm"> <div style="font-weight:700;"> Victor Crest</div><div style="font-weight:400;">
   26</div></div></center>
   <div style="font-size:16px;font-weight:400;">London</div>
