--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ position:relative;
 display:flex;
 font-weight:400;
 flex-direction:column;
-background-image:url('https://github.com/barnilsarma/Profile-card-component/blob/main/bg-pattern-card.svg');
+background-image:url('https://raw.githubusercontent.com/barnilsarma/Profile-card-component/a628c7224de5ab25afd565bd45f613783e10e209/bg-pattern-card.svg');
 background-size:100% 40%;
 background-repeat:no-repeat;
 background-color:#ffffff;
@@ -70,7 +70,7 @@ width:90%;
 height:80%;
 top:10%;
 left:5%;
-background-image:url('https://github.com/barnilsarma/Profile-card-component/blob/main/bg-pattern-top.svg'),url('https://raw.githubusercontent.com/barnilsarma/Profile-card-component/17d5f0facfa4cd723c0442879a12cb6b068e9aad/bg-pattern-bottom.svg');
+background-image:url('https://raw.githubusercontent.com/barnilsarma/Profile-card-component/a628c7224de5ab25afd565bd45f613783e10e209/bg-pattern-card.svg'),url('https://raw.githubusercontent.com/barnilsarma/Profile-card-component/17d5f0facfa4cd723c0442879a12cb6b068e9aad/bg-pattern-bottom.svg');
 background-position:-600px -300px,600px 300px;
 background-repeat:no-repeat,no-repeat;
 background-size:100% 100%,100% 100%;
